fixed footer bug on mobile

--- a/static/css/sass.css
+++ b/static/css/sass.css
@@ -1896,7 +1896,7 @@ input[type=range].MASAS-slider {
     right: 0;
     bottom: -15rem;
     transition-property: top, bottom;
-    transition-duration: 0.3s;
+    transition-duration: .3s;
     transition-timing-function: ease-in; }
     .footer--wrapper .slider--wrapper .toogle-open-tray-icon {
       display: none;
@@ -1919,7 +1919,7 @@ input[type=range].MASAS-slider {
         align-items: center;
         justify-content: center;
         font-family: Lato-Light;
-        font-size: 0.7rem; }
+        font-size: .7rem; }
       .footer--wrapper .slider--wrapper .visible--wrapper .playerProgressBar--wrapper {
         display: flex;
         justify-content: flex-start;
@@ -1961,7 +1961,7 @@ input[type=range].MASAS-slider {
         display: flex;
         flex-direction: row;
         align-items: center;
-        padding-left: 0.8rem;
+        padding-left: .8rem;
         justify-content: flex-start; }
         .footer--wrapper .slider--wrapper .visible--wrapper .extra-controls--wrapper .nextSong--wrapper {
           display: flex; }
@@ -1979,7 +1979,8 @@ input[type=range].MASAS-slider {
         flex-direction: column;
         align-items: flex-start;
         width: 100%;
-        padding: 0 calc(14px + 1rem); }
+        padding: 0 calc(14px + 1rem);
+        padding-top: .5rem; }
         .footer--wrapper .slider--wrapper .hidden--wrapper .dislike-choices--wrapper hr {
           width: 100%;
           border: 0;
@@ -2027,7 +2028,7 @@ input[type=range].MASAS-slider {
         .footer--wrapper .slider--wrapper .visible--wrapper .buffer-info {
           display: flex; }
         .footer--wrapper .slider--wrapper .visible--wrapper .player--wrapper {
-          padding-right: 0.8rem; }
+          padding-right: .8rem; }
         .footer--wrapper .slider--wrapper .visible--wrapper .extra-controls--wrapper {
           padding-left: 0; }
         .footer--wrapper .slider--wrapper .visible--wrapper .next-icon {
@@ -2044,9 +2045,9 @@ input[type=range].MASAS-slider {
           .footer--wrapper .slider--wrapper .hidden--wrapper .dislike-choices--wrapper hr {
             display: none; }
           .footer--wrapper .slider--wrapper .hidden--wrapper .dislike-choices--wrapper span {
-            font-size: 0.8rem; }
+            font-size: .8rem; }
           .footer--wrapper .slider--wrapper .hidden--wrapper .dislike-choices--wrapper span::before {
-            padding-right: 0.8rem; } }
+            padding-right: .8rem; } }
 .upload-sc-item--wrapper {
   border-width: 1px;
   border-style: solid;
