--- a/static/sass/Footer/Footer.sass
+++ b/static/sass/Footer/Footer.sass
@@ -149,6 +149,7 @@ $footerHeight: $phone-footer-height
 				align-items: flex-start
 				width: 100%
 				padding: 0 calc(14px + 1rem)
+				padding-top: 0.5rem
 
 				hr
 					width: 100%
